--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="new_password">New Password</string>
     <string name="update">Update</string>
     <string name="cancel">Cancel</string>
+    <string name="name">Name</string>
 </resources>
